--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/portfolio.css">
     <script src="https://kit.fontawesome.com/95d865a025.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Mariana Balanchuk - Front-End Developer</title>
 </head>
 
 <body>
-
+    <h1>Hi, I'm Mariana</h1>
 </body>
 
 </html>
