made sidebar sticky

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </nav>
     </header>
     <main>
+
         <div class="page-container">
             <div class="introduction">
                 <p>Hi, I'am</p>
@@ -56,6 +57,7 @@
             <div>
                 <img src="/images/main-image.svg" class="main-img" alt="">
             </div>
+
             <div class="social-media">
                 <a href="https://www.instagram.com/mariana.balanchuk/" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
@@ -64,7 +66,33 @@
                 <a href="https://github.com/asteriab" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </div>
+
+
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis alias qui, ad praesentium consequuntur
+                voluptatum possimus sed consequatur iusto cupiditate non explicabo perferendis quisquam, dignissimos,
+                exercitationem at sint reiciendis labore.</div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis alias qui, ad praesentium consequuntur
+                voluptatum possimus sed consequatur iusto cupiditate non explicabo perferendis quisquam, dignissimos,
+                exercitationem at sint reiciendis labore.</div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis alias qui, ad praesentium consequuntur
+                voluptatum possimus sed consequatur iusto cupiditate non explicabo perferendis quisquam, dignissimos,
+                exercitationem at sint reiciendis labore.</div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis alias qui, ad praesentium consequuntur
+                voluptatum possimus sed consequatur iusto cupiditate non explicabo perferendis quisquam, dignissimos,
+                exercitationem at sint reiciendis labore.</div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis alias qui, ad praesentium consequuntur
+                voluptatum possimus sed consequatur iusto cupiditate non explicabo perferendis quisquam, dignissimos,
+                exercitationem at sint reiciendis labore.</div>
+
+
+
         </div>
+
+
+
+
+
+
     </main>
 </body>
 
