changed toggler icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand" href="#">MB</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -49,14 +49,14 @@
 
     <main class="container">
         <div class="home-container">
-            <div class="introduction col-7">
+            <div class="introduction col-md-7">
                 <p>Hi, I'am</p>
                 <h1>Mariana Balanchuk</h1>
                 <h2>Front-End developer from Ukraine</h2>
                 <button class="button">Download CV</button>
             </div>
-            <div class="col-4">
-                <img src="/images/main-image.svg" class="main-img" alt="">
+            <div class="col-md-4">
+                <img src="/images/main-image.svg" class="main-img img-fluid" alt="">
             </div>
             <div class="social-media col-1">
                 <a href="https://www.instagram.com/mariana.balanchuk/" target="_blank"><i
@@ -70,27 +70,28 @@
 
 
 
-        <div class="projects" id="projects">
+        <div class="projects container" id="projects">
             <h2 class="col-12">My Projects</h2>
 
             <ul class="col-12 row">
-                <li class="col-4 project">
+                <li class="col-md-6 project">
                     <a href="https://graceful-kleicha-63eb8d.netlify.app/" target="_blank"><img
-                            src="/images/pizza-landing-page.png" class="project-img" alt=""></a>
+                            src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
                     <h4>Pizza Landing Page</h4>
                     <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
                             target="_blank">View
                             Project</a>
                     </button>
                 </li>
-                <li class="col-4 project">
+                <li class="col-md-6 project">
                     <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
-                            src="/images/weather-app.png" class="project-img" alt=""></a>
+                            src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
                     <h4>Weather App</h4>
                     <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
                             target="_blank">View
                             Project</a></button>
                 </li>
+
             </ul>
         </div>
 
