--- a/index.html
+++ b/index.html
@@ -48,56 +48,57 @@
 
 
     <main class="container">
-        <div class="home-container">
-            <div class="introduction col-md-7">
-                <p>Hi, I'am</p>
-                <h1>Mariana Balanchuk</h1>
-                <h2>Front-End developer from Ukraine</h2>
-                <button class="button">Download CV</button>
-            </div>
-            <div class="col-md-4">
-                <img src="/images/main-image.svg" class="main-img img-fluid" alt="">
-            </div>
-            <div class="social-media col-1">
-                <a href="https://www.instagram.com/mariana.balanchuk/" target="_blank"><i
-                        class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/mariana-balanchuk/" target="_blank"><i
-                        class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/asteriab" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+
+        <div class="col-11">
+            <div class="container">
+
+                <div class="introduction col-md-7">
+                    <p>Hi, I'am</p>
+                    <h1>Mariana Balanchuk</h1>
+                    <h2>Front-End developer from Ukraine</h2>
+                    <button class="button">Download CV</button>
+                </div>
+                <div class="col-md-3">
+                    <img src="/images/main-image.svg" class="main-img img-fluid" alt="">
+                </div>
+
+
+                <div class="projects container" id="projects">
+                    <h2 class="col-12">My Projects</h2>
+
+                    <ul class="col-12 row">
+                        <li class="col-md-6 project">
+                            <a href="https://graceful-kleicha-63eb8d.netlify.app/" target="_blank"><img
+                                    src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
+                            <h4>Pizza Landing Page</h4>
+                            <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
+                                    target="_blank">View
+                                    Project</a>
+                            </button>
+                        </li>
+                        <li class="col-md-6 project">
+                            <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
+                                    src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
+                            <h4>Weather App</h4>
+                            <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
+                                    target="_blank">View
+                                    Project</a></button>
+                        </li>
+
+                    </ul>
+                </div>
+
             </div>
         </div>
 
-
-
-        <div class="projects container" id="projects">
-            <h2 class="col-12">My Projects</h2>
-
-            <ul class="col-12 row">
-                <li class="col-md-6 project">
-                    <a href="https://graceful-kleicha-63eb8d.netlify.app/" target="_blank"><img
-                            src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
-                    <h4>Pizza Landing Page</h4>
-                    <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
-                            target="_blank">View
-                            Project</a>
-                    </button>
-                </li>
-                <li class="col-md-6 project">
-                    <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
-                            src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
-                    <h4>Weather App</h4>
-                    <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
-                            target="_blank">View
-                            Project</a></button>
-                </li>
-
-            </ul>
+        <div class="social-media col-1">
+            <a href="https://www.instagram.com/mariana.balanchuk/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/mariana-balanchuk/" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/asteriab" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </div>
-
-
-
-
     </main>
 </body>
 
