added content to about page

--- a/about.html
+++ b/about.html
@@ -17,12 +17,59 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
     <title>Mariana Balanchuk - About Me</title>
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html">MB</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
+    <main class="container">
+        <div class="introduction col-md-12">
+            <h1>About</h1>
+            <h3>Hi, I'm Mariana Balanchuk.</h3>
+            <p>I'm a front-end developer from Ukraine. This is my site where I share the projects I've been working on.
+                I love to learn and have fun while doing it.
+            </p>
+            <h3>My Skillsets</h3>
+            <ul class="container skills">
+                <li class="col-md-3"><i class="devicon-html5-plain"></i></li>
+                <li class="col-md-3"><i class="devicon-css3-plain"></i></li>
+                <li class="col-md-3"><i class="devicon-javascript-plain"></i></li>
+                <li class="col-md-3"><i class="devicon-vscode-plain"></i></li>
+                <li class="col-md-3"><i class="devicon-bootstrap-plain"></i></li>
+                <li class="col-md-3"><i class="devicon-git-plain"></i></li>
+                <li class="col-md-3"><i class="devicon-github-original"></i></li>
+            </ul>
+        </div>
+    </main>
 </body>
 
 </html>
