updated about page

--- a/about.html
+++ b/about.html
@@ -52,23 +52,45 @@
     </header>
 
     <main class="container">
-        <div class="introduction col-md-12">
-            <h1>About</h1>
-            <h3>Hi, I'm Mariana Balanchuk.</h3>
-            <p>I'm a front-end developer from Ukraine. This is my site where I share the projects I've been working on.
-                I love to learn and have fun while doing it.
-            </p>
-            <h3>My Skillsets</h3>
-            <ul class="container skills">
-                <li class="col-md-3"><i class="devicon-html5-plain"></i></li>
-                <li class="col-md-3"><i class="devicon-css3-plain"></i></li>
-                <li class="col-md-3"><i class="devicon-javascript-plain"></i></li>
-                <li class="col-md-3"><i class="devicon-vscode-plain"></i></li>
-                <li class="col-md-3"><i class="devicon-bootstrap-plain"></i></li>
-                <li class="col-md-3"><i class="devicon-git-plain"></i></li>
-                <li class="col-md-3"><i class="devicon-github-original"></i></li>
-            </ul>
+
+        <div class="col-11">
+            <div class="container">
+
+                <div class="introduction col-md-7">
+                    <h1>About</h1>
+                    <h3>Hi, I'm Mariana Balanchuk.</h3>
+                    <p>I'm a front-end developer from Ukraine. This is my site where I share the projects I've been
+                        working on. I love to learn and have fun while doing it.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="/images/my-photo.png" alt="" class="my-photo">
+                </div>
+
+                <div class="skills container" id="skills">
+                    <h2 class="col-12">My Skillset</h2>
+
+                    <ul class="col-12 row">
+                        <li class="col-md-3"><i class="devicon-html5-plain"></i><br><span>HTML5</span></li>
+                        <li class="col-md-3"><i class="devicon-css3-plain"></i><br><span>CSS</span></li>
+                        <li class="col-md-3"><i class="devicon-javascript-plain"></i><br><span>JavaScript</span></li>
+                        <li class="col-md-3"><i class="devicon-vscode-plain"></i><br><span>VS Code</span></li>
+                        <li class="col-md-3"><i class="devicon-bootstrap-plain"></i><br><span>Bootstrap</span></li>
+                        <li class="col-md-3"><i class="devicon-git-plain"></i><br><span>Git</span></li>
+                        <li class="col-md-3"><i class="devicon-github-original"></i><br><span>Github</span></li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
+        <div class="social-media col-1">
+            <a href="https://www.instagram.com/mariana.balanchuk/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/mariana-balanchuk/" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/asteriab" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+
     </main>
 </body>
 
