--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                         <li class="col-md-3"><i class="devicon-github-original"></i><br><span>Github</span></li>
                     </ul>
                 </div>
-                <button class="button center-btn">See My Projects</button>
+                <button class="button center-btn"> <a href="/work.html">See My Projects</a></button>
             </div>
         </div>
 
