--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
-    <title>Mariana Balanchuk - Front-End Developer</title>
+    <title>Mariana Balanchuk - My Projects</title>
 </head>
 
 <body>
@@ -34,13 +34,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/work.html">Projects</a>
+                            <a class="nav-link active" href="/work.html">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Contact</a>
@@ -58,40 +58,29 @@
             <div class="container">
 
                 <div class="introduction col-md-7">
-                    <p>Hi, I'am</p>
-                    <h1>Mariana Balanchuk</h1>
-                    <h2>Front-End developer from Ukraine</h2>
-                    <button class="button">Download CV</button>
+                    <h1>My Projects</h1>
+                    <h2>Take a look at what I've been working on!</h2>
                 </div>
-                <div class="col-md-4">
-                    <img src="/images/main-image.svg" class="main-img img-fluid" alt="">
-                </div>
-
 
                 <div class="projects container" id="projects">
-                    <h2 class="col-12">My Projects</h2>
 
                     <ul class="col-12 row">
                         <li class="col-md-6 project">
                             <a href="https://graceful-kleicha-63eb8d.netlify.app/" target="_blank"><img
                                     src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
                             <h4>Pizza Landing Page</h4>
-                            <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
-                                    target="_blank">View
-                                    Project</a>
-                            </button>
+                            <p>Built with HTML and CSS</p>
                         </li>
                         <li class="col-md-6 project">
                             <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
                                     src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
                             <h4>Weather App</h4>
-                            <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
-                                    target="_blank">View
-                                    Project</a></button>
+                            <p>Built with HTML and CSS</p>
                         </li>
 
                     </ul>
                 </div>
+
 
             </div>
         </div>
