--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about.html">About</a>
@@ -57,7 +57,7 @@
         <div class="col-11">
             <div class="container">
 
-                <div class="introduction col-md-7">
+                <div class="projects-heading col-md-7">
                     <h1>My Projects</h1>
                     <h2>Take a look at what I've been working on!</h2>
                 </div>
@@ -70,12 +70,19 @@
                                     src="/images/pizza-landing-page.png" class="project-img img-fluid" alt=""></a>
                             <h4>Pizza Landing Page</h4>
                             <p>Built with HTML and CSS</p>
+                            <button class="view-button"><a href="https://graceful-kleicha-63eb8d.netlify.app/"
+                                    target="_blank">View
+                                    Project</a>
+                            </button>
                         </li>
                         <li class="col-md-6 project">
                             <a href="https://frabjous-meringue-af1318.netlify.app/" target="_blank"><img
                                     src="/images/weather-app.png" class="project-img img-fluid" alt=""></a>
                             <h4>Weather App</h4>
-                            <p>Built with HTML and CSS</p>
+                            <p>Built with HTML, CSS and JavaScript</p>
+                            <button class="view-button"> <a href="https://frabjous-meringue-af1318.netlify.app/"
+                                    target="_blank">View
+                                    Project</a></button>
                         </li>
 
                     </ul>
