--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="/work.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Contact</a>
+                            <a class="nav-link" href="/contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
