--- a/contact.html
+++ b/contact.html
@@ -56,31 +56,15 @@
 
         <div class="col-11">
             <div class="container">
-                <div class="projects-heading col-md-7">
+                <div class="projects-heading col-md-10">
                     <h1>Contact Me</h1>
                     <h2>Let's get in touch!</h2>
                 </div>
 
 
-                <form action="mailto:mariana.balanchuk@gmail.com" class="col-md-7">
-                    <ul>
-                        <li>
-                            <label for="name">Name:</label>
-                            <input type="text" id="name" placeholder="Enter your name">
-                        </li>
-                        <li>
-                            <label for="email">Email:</label>
-                            <input type="email" id="email" placeholder="Enter your email">
-                        </li>
-                        <li>
-                            <label for="message">Message:</label>
-                            <textarea id="message" cols="30" rows="10" placeholder="Enter your message"></textarea>
-                        </li>
-                        <li>
-                            <button type="submit" class="view-button">Send</button>
-                        </li>
-                    </ul>
-                </form>
+                <button class="col-md-3 view-button center-btn p-3 email-btn"><a
+                        href="mailto:mariana.balanchuk@gmail.com" target="_blank">Email
+                        Me</a></button>
 
             </div>
         </div>
