--- a/contact.html
+++ b/contact.html
@@ -56,15 +56,14 @@
 
         <div class="col-11">
             <div class="container">
-                <div class="projects-heading col-md-10">
+                <div class="projects-heading col-md-7">
                     <h1>Contact Me</h1>
                     <h2>Let's get in touch!</h2>
+                    <div class="contact-img col-md-4">
+                        <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><img src="/images/contact_me.svg"
+                                class="contact-pic" alt=""></a>
+                    </div>
                 </div>
-
-
-                <button class="col-md-3 view-button center-btn p-3 email-btn"><a
-                        href="mailto:mariana.balanchuk@gmail.com" target="_blank">Email
-                        Me</a></button>
 
             </div>
         </div>
