--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mariana is a front-end developer from Ukraine">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/portfolio.css">
@@ -26,7 +27,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">MB</a>
+                <a class="navbar-brand" href="#" title="Homepage">MB</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
@@ -34,16 +35,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#" title="Homepage">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
+                            <a class="nav-link" href="/about.html" title="About Mariana">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/work.html">Projects</a>
+                            <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact</a>
+                            <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -61,10 +62,10 @@
                     <p>Hi, I'am</p>
                     <h1>Mariana Balanchuk</h1>
                     <h2>Front-End developer from Ukraine</h2>
-                    <button class="button">Download CV</button>
+                    <button class="button" id="cv-button">Download CV</button>
                 </div>
                 <div class="col-md-4">
-                    <img src="/images/main-image.svg" class="main-img img-fluid" alt="">
+                    <img src="/images/main-image.svg" class="main-img img-fluid" alt="icon of a woman coding">
                 </div>
 
 
@@ -105,6 +106,21 @@
             <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </main>
+
+
+    <footer>
+        <div class="container-fluid footer-cont row">
+            <div class="col-md-5">
+                <h4>Work Inquiry</h4>
+                <p class="text-muted">Let's work together!</p>
+            </div>
+            <div class="col-md-3">
+                <button class="contact-button">
+                    <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"> Contact me </a>
+                </button>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
