--- a/contact.html
+++ b/contact.html
@@ -23,32 +23,32 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">MB</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/work.html">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+    header>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" title="Homepage">MB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#" title="Homepage">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html" title="About Mariana">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
     </header>
 
 
@@ -61,7 +61,7 @@
                     <h2>Let's get in touch!</h2>
                     <div class="contact-img col-md-4">
                         <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"><img src="/images/contact_me.svg"
-                                class="contact-pic" alt=""></a>
+                                class="contact-pic img-fluid" alt=""></a>
                     </div>
                 </div>
 
@@ -77,5 +77,19 @@
         </div>
     </main>
 </body>
+
+<footer>
+    <div class="container-fluid footer-cont row">
+        <div class="col-md-5">
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together!</p>
+        </div>
+        <div class="col-md-3">
+            <button class="contact-button">
+                <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"> Contact me </a>
+            </button>
+        </div>
+    </div>
+</footer>
 
 </html>
