--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" title="Homepage">Home</a>
+                        <a class="nav-link " aria-current="page" href="#" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html" title="About Mariana">About</a>
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
+                        <a class="nav-link active" href="/contact.html" title="Contact Mariana">Contact</a>
                     </li>
                 </ul>
             </div>
