--- a/work.html
+++ b/work.html
@@ -34,13 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" title="Homepage">Home</a>
+                        <a class="nav-link " aria-current="page" href="#" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html" title="About Mariana">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/work.html" title="Mariana's work">Projects</a>
+                        <a class="nav-link active" href="/work.html" title="Mariana's work">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact.html" title="Contact Mariana">Contact</a>
