--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
+
     <title>Mariana Balanchuk - Front-End Developer</title>
 </head>
 
@@ -124,5 +125,6 @@
         </div>
     </footer>
 </body>
+<script src="/portfolio.js"></script>
 
 </html>
