--- a/work.html
+++ b/work.html
@@ -115,6 +115,7 @@
                     <a href="mailto:mariana.balanchuk@gmail.com" target="_blank"> Contact me </a>
                 </button>
             </div>
+            <p><a href="https://github.com/asteriab/portfolio-project">Open-source code</a> by Mariana Balanchuk</p>
         </div>
     </footer>
 </body>
